new file:   .firebase/hosting.ZGlzdFxtYWlu.cache 	new file:   .firebase/hosting.eQ.cache 	new file:   .firebaserc 	new file:   .github/workflows/firebase-hosting-merge.yml 	new file:   .github/workflows/firebase-hosting-pull-request.yml 	modified:   angular.json 	new file:   firebase.json 	modified:   package-lock.json 	modified:   package.json 	modified:   src/app/app-routing.module.ts 	modified:   src/app/app.component.css 	modified:   src/app/app.component.html 	modified:   src/app/app.component.ts 	modified:   src/app/app.module.ts 	new file:   src/app/carrito/agregarAlCarritoService/producto-service.service.spec.ts 	new file:   src/app/carrito/agregarAlCarritoService/producto-service.service.ts 	new file:   src/app/carrito/carrito-routing.module.ts 	new file:   src/app/carrito/carrito.module.ts 	new file:   src/app/carrito/producto/producto.component.css 	new file:   src/app/carrito/producto/producto.component.html 	new file:   src/app/carrito/producto/producto.component.spec.ts 	new file:   src/app/carrito/producto/producto.component.ts 	new file:   src/app/carrito/productos-carrito/productos-carrito.component.css 	new file:   src/app/carrito/productos-carrito/productos-carrito.component.html 	new file:   src/app/carrito/productos-carrito/productos-carrito.component.spec.ts 	new file:   src/app/carrito/productos-carrito/productos-carrito.component.ts 	new file:   src/app/generales/apiService/api.service.spec.ts 	new file:   src/app/generales/apiService/api.service.ts 	new file:   src/app/generales/apiService/producto.ts 	new file:   src/app/generales/footer/footer.component.css 	new file:   src/app/generales/footer/footer.component.html 	new file:   src/app/generales/footer/footer.component.spec.ts 	new file:   src/app/generales/footer/footer.component.ts 	new file:   src/app/generales/generales.module.ts 	new file:   src/app/generales/header/header.component.css 	new file:   src/app/generales/header/header.component.html 	new file:   src/app/generales/header/

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Main</title>
-  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <title>Lash</title>
+
+
+  <!-- Bootstrap core CSS -->
+
+  <style>
+    .bd-placeholder-img {
+      font-size: 1.125rem;
+      text-anchor: middle;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      user-select: none;
+    }
+
+    @media (min-width: 768px) {
+      .bd-placeholder-img-lg {
+        font-size: 3.5rem;
+      }
+    }
+  </style>
+
+
+  <!-- Custom styles for this template -->
+  <script src="https://kit.fontawesome.com/e2a2fac99f.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
